nimcuda/cublas_api.nim


proc cublasSsyr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cfloat; x: ptr cfloat; incx: cint; y: ptr cfloat;
                    incy: cint; A: ptr cfloat; lda: cint): cublasStatus_t {.cdecl,
    importc: "cublasSsyr2_v2", dynlib: libName.}
proc cublasSsyr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cfloat; x: ptr cfloat; incx: clonglong; y: ptr cfloat;
                       incy: clonglong; A: ptr cfloat; lda: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasSsyr2_v2_64", dynlib: libName.}
proc cublasDsyr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cdouble; x: ptr cdouble; incx: cint; y: ptr cdouble;
                    incy: cint; A: ptr cdouble; lda: cint): cublasStatus_t {.cdecl,
    importc: "cublasDsyr2_v2", dynlib: libName.}
proc cublasDsyr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cdouble; x: ptr cdouble; incx: clonglong;
                       y: ptr cdouble; incy: clonglong; A: ptr cdouble; lda: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasDsyr2_v2_64", dynlib: libName.}
proc cublasCsyr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cuComplex; x: ptr cuComplex; incx: cint;
                    y: ptr cuComplex; incy: cint; A: ptr cuComplex; lda: cint): cublasStatus_t {.
    cdecl, importc: "cublasCsyr2_v2", dynlib: libName.}
proc cublasCsyr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cuComplex; x: ptr cuComplex; incx: clonglong;
                       y: ptr cuComplex; incy: clonglong; A: ptr cuComplex;
                       lda: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCsyr2_v2_64", dynlib: libName.}
proc cublasZsyr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cuDoubleComplex; x: ptr cuDoubleComplex; incx: cint;
                    y: ptr cuDoubleComplex; incy: cint; A: ptr cuDoubleComplex;
                    lda: cint): cublasStatus_t {.cdecl, importc: "cublasZsyr2_v2",
    dynlib: libName.}
proc cublasZsyr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cuDoubleComplex; x: ptr cuDoubleComplex;
                       incx: clonglong; y: ptr cuDoubleComplex; incy: clonglong;
                       A: ptr cuDoubleComplex; lda: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZsyr2_v2_64", dynlib: libName.}
proc cublasCher2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cuComplex; x: ptr cuComplex; incx: cint;
                    y: ptr cuComplex; incy: cint; A: ptr cuComplex; lda: cint): cublasStatus_t {.
    cdecl, importc: "cublasCher2_v2", dynlib: libName.}
proc cublasCher2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cuComplex; x: ptr cuComplex; incx: clonglong;
                       y: ptr cuComplex; incy: clonglong; A: ptr cuComplex;
                       lda: clonglong): cublasStatus_t {.cdecl,
    importc: "cublasCher2_v2_64", dynlib: libName.}
proc cublasZher2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cuDoubleComplex; x: ptr cuDoubleComplex; incx: cint;
                    y: ptr cuDoubleComplex; incy: cint; A: ptr cuDoubleComplex;
                    lda: cint): cublasStatus_t {.cdecl, importc: "cublasZher2_v2",
    dynlib: libName.}
proc cublasZher2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cuDoubleComplex; x: ptr cuDoubleComplex;
                       incx: clonglong; y: ptr cuDoubleComplex; incy: clonglong;
                       A: ptr cuDoubleComplex; lda: clonglong): cublasStatus_t {.
    cdecl, importc: "cublasZher2_v2_64", dynlib: libName.}
##  SPR2/HPR2

proc cublasSspr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cfloat; x: ptr cfloat; incx: cint; y: ptr cfloat;
                    incy: cint; AP: ptr cfloat): cublasStatus_t {.cdecl,
    importc: "cublasSspr2_v2", dynlib: libName.}
proc cublasSspr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cfloat; x: ptr cfloat; incx: clonglong; y: ptr cfloat;
                       incy: clonglong; AP: ptr cfloat): cublasStatus_t {.cdecl,
    importc: "cublasSspr2_v2_64", dynlib: libName.}
proc cublasDspr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cdouble; x: ptr cdouble; incx: cint; y: ptr cdouble;
                    incy: cint; AP: ptr cdouble): cublasStatus_t {.cdecl,
    importc: "cublasDspr2_v2", dynlib: libName.}
proc cublasDspr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cdouble; x: ptr cdouble; incx: clonglong;
                       y: ptr cdouble; incy: clonglong; AP: ptr cdouble): cublasStatus_t {.
    cdecl, importc: "cublasDspr2_v2_64", dynlib: libName.}
proc cublasChpr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cuComplex; x: ptr cuComplex; incx: cint;
                    y: ptr cuComplex; incy: cint; AP: ptr cuComplex): cublasStatus_t {.
    cdecl, importc: "cublasChpr2_v2", dynlib: libName.}
proc cublasChpr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cuComplex; x: ptr cuComplex; incx: clonglong;
                       y: ptr cuComplex; incy: clonglong; AP: ptr cuComplex): cublasStatus_t {.
    cdecl, importc: "cublasChpr2_v2_64", dynlib: libName.}
proc cublasZhpr2_v2*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: cint;
                    alpha: ptr cuDoubleComplex; x: ptr cuDoubleComplex; incx: cint;
                    y: ptr cuDoubleComplex; incy: cint; AP: ptr cuDoubleComplex): cublasStatus_t {.
    cdecl, importc: "cublasZhpr2_v2", dynlib: libName.}
proc cublasZhpr2_v2_64*(handle: cublasHandle_t; uplo: cublasFillMode_t; n: clonglong;
                       alpha: ptr cuDoubleComplex; x: ptr cuDoubleComplex;
                       incx: clonglong; y: ptr cuDoubleComplex; incy: clonglong;
                       AP: ptr cuDoubleComplex): cublasStatus_t {.cdecl,
    importc: "cublasZhpr2_v2_64", dynlib: libName.}
##  BATCH GEMV
